--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ fastapi==0.78.0
 greenlet==1.1.2
 idna==3.3
 iniconfig==1.1.1
+jose==1.0.0
 packaging==21.3
+passlib==1.7.4
 pluggy==1.0.0
 psycopg2-binary==2.9.3
 py==1.11.0
@@ -14,6 +16,7 @@ pydantic==1.9.1
 pyparsing==3.0.9
 pytest==7.1.2
 python-decouple==3.6
+python_jose==3.3.0
 requests==2.27.1
 six==1.16.0
 sniffio==1.2.0
