--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 anyio==3.6.1
+asgiref==3.5.2
 attrs==21.4.0
+bcrypt==3.2.2
 certifi==2022.5.18.1
+cffi==1.15.0
 charset-normalizer==2.0.12
+click==8.1.3
+ecdsa==0.17.0
 fastapi==0.78.0
 greenlet==1.1.2
+h11==0.13.0
+httptools==0.4.0
 idna==3.3
 iniconfig==1.1.1
 jose==1.0.0
@@ -12,12 +19,18 @@ passlib==1.7.4
 pluggy==1.0.0
 psycopg2-binary==2.9.3
 py==1.11.0
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.9.1
 pyparsing==3.0.9
 pytest==7.1.2
 python-decouple==3.6
-python_jose==3.3.0
+python-dotenv==0.20.0
+python-jose==3.3.0
+python-multipart==0.0.5
+PyYAML==6.0
 requests==2.27.1
+rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.36
@@ -26,5 +39,10 @@ sqlalchemy2-stubs==0.0.2a22
 sqlmodel==0.0.6
 starlette==0.19.1
 tomli==2.0.1
+typer==0.4.1
 typing_extensions==4.2.0
 urllib3==1.26.9
+uvicorn==0.17.6
+uvloop==0.16.0
+watchgod==0.8.2
+websockets==10.3
