--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,20 @@ version: '3.8'
 services:
   db:
     image: postgres:13
-    env_file:
-      - app/.env
+    container_name: book_api_db
+    environment:
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_DB=$POSTGRES_DB
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=DATABASE_USER
-      - POSTGRES_PASSWORD=DATABASE_PASSWORD
-      - POSTGRES_DB=DATABASE
     ports:
       - 5432:5432
-    container_name: book_api_db
   app:
     build: .
-    env_file:
-      - app/.env
+    container_name: book_api_app
+    environment:
+      - DATABASE_URL=$DATABASE_URL
     command: uvicorn app.main:app --host 0.0.0.0 --port 80
     volumes:
       - .:/app
@@ -25,7 +24,6 @@ services:
       - 8000:80
     depends_on:
       - db
-    container_name: book_api_app
 
 volumes:
   postgres_data:
