remove author test, add env vars to gh actions

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,3 +37,9 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+      env:
+        SECRET_KEY: abc123
+        DEBUG: True
+        DATABASE_URL: sqlite:///test.db
+        ALGORITHM: HS256
+        ACCESS_TOKEN_EXPIRE_MINUTES: 2
