--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,3 +43,4 @@ jobs:
         DATABASE_URL: sqlite:///test.db
         ALGORITHM: HS256
         ACCESS_TOKEN_EXPIRE_MINUTES: 2
+        CHECK_SAME_THREAD: True
