--- a/app/.env-template
+++ b/app/.env-template
@@ -3,7 +3,7 @@ POSTGRES_PASSWORD=
 POSTGRES_DB=
 
 DEBUG=
-DATABASE_URL=
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
 SECRET_KEY=
-ALGORITHM=
+ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=
