--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
-anyio==3.6.1
-asgiref==3.5.2
-attrs==21.4.0
-bcrypt==3.2.2
-certifi==2022.5.18.1
-cffi==1.15.0
-charset-normalizer==2.0.12
+anyio==3.6.2
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
 click==8.1.3
-ecdsa==0.17.0
-fastapi==0.78.0
-greenlet==1.1.2
+cryptography==38.0.4
+ecdsa==0.18.0
+fastapi==0.88.0
 h11==0.13.0
-httptools==0.4.0
+httptools==0.5.0
 idna==3.3
 iniconfig==1.1.1
 jose==1.0.0
@@ -23,26 +20,24 @@ pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.1
 pyparsing==3.0.9
-pytest==7.1.2
 python-decouple==3.6
 python-dotenv==0.20.0
 python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==6.0
-requests==2.27.1
+requests==2.28.1
 rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.36
 SQLAlchemy-Utils==0.38.2
 sqlalchemy2-stubs==0.0.2a22
-sqlmodel==0.0.6
-starlette==0.19.1
+starlette==0.22.0
 tomli==2.0.1
-typer==0.4.1
+typer==0.7.0
 typing_extensions==4.2.0
 urllib3==1.26.9
-uvicorn==0.17.6
+uvicorn==0.20.0
 uvloop==0.16.0
-watchgod==0.8.2
-websockets==10.3
+watchfiles==0.18.1
+websockets==10.4
