--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 anyio==3.6.2
+attrs==22.1.0
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 cryptography==38.0.4
 ecdsa==0.18.0
+exceptiongroup==1.0.4
 fastapi==0.88.0
 h11==0.13.0
+httpcore==0.16.2
 httptools==0.5.0
+httpx==0.23.1
 idna==3.3
 iniconfig==1.1.1
 jose==1.0.0
@@ -20,12 +24,14 @@ pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.1
 pyparsing==3.0.9
+pytest==7.2.0
 python-decouple==3.6
 python-dotenv==0.20.0
 python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==6.0
 requests==2.28.1
+rfc3986==1.5.0
 rsa==4.8
 six==1.16.0
 sniffio==1.2.0
