--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,32 @@ version: '3.8'
 
 services:
 
-  db:
+  yourbooks_db:
     image: postgres:13
-    container_name: book_api_db
+    container_name: yourbooks_db
     environment:
       - POSTGRES_USER=$POSTGRES_USER
       - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
       - POSTGRES_DB=$POSTGRES_DB
+      - PGUSER=$POSTGRES_USER
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    ports:
-      - 5432:5432
+    networks:
+      - yourbooks_network
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 5s
+      timeout: 5s
+      retries: 3
+
   app:
-    build: .
-    container_name: book_api_app
-    image: benpgriffith/app:latest
+    container_name: yourbooks
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    image: benpgriffith/yourbooks:latest
     environment:
-      - DATABASE_URL=$DATABASE_URL
+      - DATABASE_URL=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@yourbooks_db/$POSTGRES_DB
       - DEBUG=$DEBUG
       - SECRET_KEY=$SECRET_KEY
       - ALGORITHM=$ALGORITHM
@@ -26,8 +35,14 @@ services:
     command: uvicorn app.main:app --host 0.0.0.0 --port 80
     ports:
       - 8000:80
+    networks:
+      - yourbooks_network
     depends_on:
-      - db
+      yourbooks_db:
+        condition: service_healthy
 
 volumes:
   postgres_data:
+
+networks:
+  yourbooks_network:
